@@ -91,7 +91,7 @@ real MultiAdaptiveTimeSlab::build(real a, real b)
   _b = b;
 
   //cout << "Multi-adaptive time slab: finished building between "
-  //     << a << " and " << b << ": K = " << b - a << endl;
+  //     << a << " and " << b << ": K = " << b - a << ", nj = " << nj << endl;
 
   // Update at t = 0.0
   if ( a < DOLFIN_EPS )
